<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/label_menu_sort"
        android:textSize="24sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="6dp"
        android:background="@drawable/layout_gradation" />

    <RadioGroup
        android:id="@+id/sort_dialog_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center">

        <RadioButton
            android:id="@+id/sort_dialog_date_ascending"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/label_sort_date_ascending"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/sort_dialog_date_descending"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/label_sort_date_descending"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/sort_dialog_status_ascending"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/label_sort_status_ascending"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/sort_dialog_status_descending"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/label_sort_status_descending"
            android:textSize="20sp" />

    </RadioGroup>

</LinearLayout>