<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- ツールバー -->
    <android.support.v7.widget.Toolbar
        android:id="@+id/main_toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <android.support.v4.widget.DrawerLayout
        android:id="@+id/main_drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <!-- メインコンテンツ -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!-- ツールバーに影をつける -->
            <include layout="@layout/layout_toolbar_shadow" />

            <!-- タスクリスト -->
            <ListView
                android:id="@+id/main_task_list"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <!-- タスク追加 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/main_task_add_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/label_hint_add_task" />

                <Button
                    android:id="@+id/main_task_add_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_add_task" />
            </LinearLayout>


        </LinearLayout>

        <!-- ナビゲーションドロワー -->
        <LinearLayout
            android:layout_width="240dp"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:background="@drawable/white"
            android:clickable="true"
            android:orientation="vertical">

            <!-- ツールバーに影をつける -->
            <include layout="@layout/layout_toolbar_shadow" />

            <TextView
                android:id="@+id/menu_status_setting"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/selector_textview"
                android:gravity="center"
                android:onClick="onClick"
                android:text="@string/label_menu_status"
                android:textSize="16sp" />

            <include layout="@layout/layout_separate_line" />

            <TextView
                android:id="@+id/menu_sort"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/selector_textview"
                android:gravity="center"
                android:onClick="onClick"
                android:text="@string/label_menu_sort"
                android:textSize="16sp" />

            <include layout="@layout/layout_separate_line" />

            <TextView
                android:id="@+id/menu_refine"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/selector_textview"
                android:gravity="center"
                android:onClick="onClick"
                android:text="@string/label_menu_refine"
                android:textSize="16sp" />

            <include layout="@layout/layout_separate_line" />

            <TextView
                android:id="@+id/menu_about"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/selector_textview"
                android:gravity="center"
                android:onClick="onClick"
                android:text="@string/label_menu_about_me"
                android:textSize="16sp" />

            <include layout="@layout/layout_separate_line" />

        </LinearLayout>
    </android.support.v4.widget.DrawerLayout>

    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-6182089452981195/5721295867" />
</LinearLayout>
